# HexGame

./: .gitignore  CMakeLists.txt  README.md  build.sh  camera.cpp  camera.hpp  component.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  hex_map.cpp  hex_map.hpp  main.cpp  run.sh
SDLbase/: a_star.cpp  a_star.hpp  color.cpp  color.hpp  helper.hpp  random_handler.cpp  random_handler.hpp  texture_handler.cpp  texture_handler.hpp  vectors.hpp
components/: attacker.cpp  attacker.hpp  hex.cpp  hex.hpp  movable.cpp  movable.hpp  renderable.cpp  renderable.hpp  selectable.cpp  selectable.hpp  transform.cpp  transform.hpp  unit_data.cpp  unit_data.hpp
data/: simple_unit.txt
game_gui/: entity_controller_gui.cpp  entity_controller_gui.hpp  unit_data_gui.cpp  unit_data_gui.hpp
gui/: button.cpp  button.hpp  draggable.cpp  draggable.hpp  fonts.cpp  fonts.hpp  multiline_text.cpp  multiline_text.hpp  panel.cpp  panel.hpp  text.cpp  text.hpp
parsers/: unit_parser.cpp  unit_parser.hpp
